--- a/app/src/main/res/layout/item_story.xml
+++ b/app/src/main/res/layout/item_story.xml
@@ -5,17 +5,18 @@
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="4dp"
+    app:cardCornerRadius="8dp"
     app:cardElevation="4dp"
-    android:layout_marginHorizontal="4dp"
-    app:cardUseCompatPadding="true">
+    app:cardUseCompatPadding="true"
+    tools:context=".adapter.StoryAdapter">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/img_item_photo"
+            android:padding="10dp"
+            android:id="@+id/iv_item_photo"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:scaleType="centerCrop"
@@ -28,12 +29,10 @@
             android:layout_marginStart="12dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="2dp"
-            android:layout_toEndOf="@id/img_item_photo"
+            android:layout_toEndOf="@id/iv_item_photo"
             android:maxLines="1"
-            android:textSize="12sp"
-            android:textStyle="italic"
+            android:textSize="11sp"
             android:textColor="@android:color/darker_gray"
-            app:fontFamily="sans-serif-light"
             tools:text="@string/story_name" />
 
         <com.google.android.material.textview.MaterialTextView
@@ -43,11 +42,11 @@
             android:layout_below="@id/tv_item_create_date"
             android:layout_marginStart="12dp"
             android:layout_marginBottom="2dp"
-            android:layout_toEndOf="@id/img_item_photo"
+            android:layout_toEndOf="@id/iv_item_photo"
             android:maxLines="2"
-            android:textSize="15sp"
+            android:textSize="17sp"
             android:textStyle="bold"
-            app:fontFamily="serif"
+            app:textAllCaps="true"
             tools:text="@string/story_name" />
 
         <com.google.android.material.textview.MaterialTextView
@@ -58,11 +57,10 @@
             android:layout_marginStart="14dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="6dp"
-            android:layout_toEndOf="@id/img_item_photo"
+            android:layout_toEndOf="@id/iv_item_photo"
             android:ellipsize="end"
             android:maxLines="4"
             android:textSize="13sp"
-            app:fontFamily="sans-serif-light"
             tools:text="@string/story_desc" />
 
     </RelativeLayout>
