--- a/app/src/main/res/drawable/edit_text_outline_bg.xml
+++ b/app/src/main/res/drawable/edit_text_outline_bg.xml
@@ -3,6 +3,5 @@
     <stroke
         android:width="1dp"
         android:color="@color/red_500" />
-    <corners
-        android:radius="4dp" />
+    <corners android:radius="4dp" />
 </shape>
