--- a/app/src/main/res/layout/fragment_detail_story.xml
+++ b/app/src/main/res/layout/fragment_detail_story.xml
@@ -1,54 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.detail.DetailStoryFragment">
 
     <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/iv_detail_photo"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:id="@+id/iv_detail_photo"
-        app:srcCompat="@mipmap/ic_launcher"
-        app:layout_constraintVertical_bias="0"
         android:scaleType="centerCrop"
-        app:layout_constraintDimensionRatio="4:3" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="4:3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0"
+        app:srcCompat="@mipmap/ic_launcher" />
 
     <com.google.android.material.textview.MaterialTextView
-        android:paddingTop="16dp"
-        android:paddingHorizontal="8dp"
-        app:layout_constraintTop_toBottomOf="@id/iv_detail_photo"
         android:id="@+id/tv_item_create_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="12sp"
+        android:paddingHorizontal="8dp"
+        android:paddingTop="16dp"
         android:textColor="@android:color/darker_gray"
+        android:textSize="12sp"
+        app:layout_constraintTop_toBottomOf="@id/iv_detail_photo"
         tools:text="@string/story_name" />
 
     <com.google.android.material.textview.MaterialTextView
-        android:paddingVertical="8dp"
-        android:paddingHorizontal="8dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_item_create_date"
         android:id="@+id/tv_detail_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingHorizontal="8dp"
+        android:paddingVertical="8dp"
         android:textSize="21sp"
         android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/tv_item_create_date"
         app:textAllCaps="true"
         tools:text="@string/story_name" />
 
     <com.google.android.material.textview.MaterialTextView
-        android:paddingHorizontal="8dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_detail_name"
         android:id="@+id/tv_detail_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingHorizontal="8dp"
         android:textSize="15sp"
+        app:layout_constraintTop_toBottomOf="@id/tv_detail_name"
         tools:text="@string/story_desc" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
