--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -9,7 +9,7 @@
         android:id="@+id/homeFragment"
         android:name="com.storyapp.fragment.home.HomeFragment"
         android:label="@string/story_page"
-        tools:layout="@layout/fragment_home" >
+        tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/action_homeFragment_to_authenticationFragment"
             app:destination="@id/authenticationFragment"
@@ -34,36 +34,33 @@
     <fragment
         android:id="@+id/addStoryFragment"
         android:name="com.storyapp.fragment.add.AddStoryFragment"
-        android:label="@string/new_story_page"
-        tools:layout="@layout/fragment_add_story" >
+        android:label="@string/add_story"
+        tools:layout="@layout/fragment_add_story">
         <action
             android:id="@+id/action_addStoryFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
-        <action
-            android:id="@+id/action_addStoryFragment_to_cameraFragment"
-            app:destination="@id/cameraFragment" />
     </fragment>
     <fragment
         android:id="@+id/authenticationFragment"
         android:name="com.storyapp.fragment.authentication.AuthenticationFragment"
         android:label="@string/auth_page"
-        tools:layout="@layout/fragment_authentication" >
+        tools:layout="@layout/fragment_authentication">
         <action
             android:id="@+id/action_authenticationFragment_to_homeFragment"
             app:destination="@id/homeFragment"
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim"
+            app:launchSingleTop="true"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim"
             app:popUpTo="@id/homeFragment"
-            app:popUpToInclusive="true"
-            app:launchSingleTop="true" />
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/detailStoryFragment"
         android:name="com.storyapp.fragment.detail.DetailStoryFragment"
         android:label="@string/det_story_page"
-        tools:layout="@layout/fragment_detail_story" >
+        tools:layout="@layout/fragment_detail_story">
 
         <argument
             android:name="imageStory"
@@ -77,14 +74,5 @@
         <argument
             android:name="descStory"
             app:argType="string" />
-    </fragment>
-    <fragment
-        android:id="@+id/cameraFragment"
-        android:name="com.storyapp.fragment.camera.CameraFragment"
-        android:label="fragment_camera"
-        tools:layout="@layout/fragment_camera" >
-        <action
-            android:id="@+id/action_cameraFragment_to_addStoryFragment"
-            app:destination="@id/addStoryFragment" />
     </fragment>
 </navigation>
